--- a/templates/result.html
+++ b/templates/result.html
@@ -1,11 +1,22 @@
 <html>
 <head>
+    <style>
+        td{
+            text-align: center;border-bottom: 1px solid #ddd;
+        }
+        tr:hover {background-color: #f5f5f5;}
+        tr:nth-child(even) {background-color: #f2f2f2;}
+        th {
+            background-color: #4CAF50;
+            color: white;
+            }
+    </style>
 </head>
 
 <!-- <label>{{result}}</label> -->
 
-    <table border="2px solid black">
-        <tr>
+    <table style="width: 80%; height: 80%; margin-left: 10%; border-collapse:collapse; border: 1px solid black; overflow-x: auto;">
+        <tr style="border: 1px solid black; background-color: rgb(173, 255, 173);">
             <th>Filename</th>
             <th>Result</th>
         </tr>
@@ -16,7 +27,8 @@
             </tr>
         {% endfor %}
     </table>
-    <form method="POST">
-        <input type="submit" value="Details! (update to Database)">
+    <form method="POST" action = "/database">
+        <input type="hidden" id="count" name="count" value={{length}} />
+        <input type="submit" value="Details! (update to Database)" style="width: 80%; margin-left: 10%; background-color: green; margin-top: 50px; height: 50px;">
     </form>
 </html>
